定数整理、アイコン変更

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#00bfa5" />
-    <meta
-      name="description"
-      content="文字列の重複を削除するツールです。"
-    />
+    <meta name="description"content="文字列の重複を削除するツールです。" />
+    <meta property="og:url" content="https://app.popos.work/deduplicator/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="まとめるさん" />
+    <meta property="og:description" content="文字列の重複を削除するツールです。" />
+    <meta property="og:image" content="https://app.popos.work/deduplicator/logo-ogp.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Deduplicator</title>
+    <title>まとめるさん</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
