--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#00bfa5" />
     <meta name="description"content="文字列の重複を削除するツールです。" />
-    <meta property="og:url" content="https://app.popos.work/deduplicator/" />
+    <meta property="og:url" content="https://deduplicator.p-p.dev/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="まとめるさん" />
     <meta property="og:description" content="文字列の重複を削除するツールです。" />
-    <meta property="og:image" content="https://app.popos.work/deduplicator/logo-ogp.png" />
+    <meta property="og:image" content="https://deduplicator.p-p.dev/logo-ogp.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>まとめるさん</title>
